fix(auth): fix behavior for email changes which did not allow verification email for new emails before
