# libs/core/src/main/kotlin/io/stereov/singularity/global/model/SendEmailResponse.kt
@@ -1,5 +1,5 @@
 package io.stereov.singularity.global.model
 
-data class MailSendResponse(
+data class SendEmailResponse(
     val cooldown: Long,
 )
